Fix one more problem about footer on mobile view. Make golden logo on splash to scale on hover

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -142,8 +142,21 @@ article p {
   z-index: 2;
 }
 
-.golden-logo {
+.golden-logo div {
   text-align: left;
+	max-width: 79px;
+	max-height: 28px;
+}
+
+.golden-logo img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+	transition: $transition;
+}
+
+.golden-logo img:hover {
+	  transform: scale(1.1);
 }
 
 .nav-menu-wrapper {
@@ -340,6 +353,10 @@ article p {
   padding-right: 8px;
 }
 
+.footer-container li:last-of-type {
+  padding-right: 0;
+}
+
 .footer-container i.fab {
     font-size: 20px;
     background-color: #222222;
@@ -438,9 +455,9 @@ article p {
 
 	.footer-container i.fab {
 	    font-size: 15px;
-	    width: 33px;
-	    height: 33px;
-	    line-height: 33px;
+	    width: 32px;
+	    height: 32px;
+	    line-height: 32px;
 	}
 }
 
